# LR_1_MPI_ODD_EVEN

./: .vscode-ctags  CMakeLists.txt  main.cpp  test.txt
